--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script src="https://teletext.io/js/latest/txt-min.js"></script>
+    <script>
+     var options = {
+      id: "67532487-be3e-4fd3-affe-c4cabf26be06"
+     };
+     Txt.render(options);
+    </script>
+  </head>
   <body>
     <h1>This is Organic, an open source experiment.</h1>
     <h2>Let's see where it takes us.</h2>
+
+    <div data-txt="examples.simple_replacement"></div>
   </body>
 </html>
