--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Julian Samarjiev">
+
+    <!-- teletext.io scripts  -->
     <script src="https://teletext.io/js/latest/txt-min.js"></script>
     <script>
      var options = {
@@ -8,6 +13,10 @@
      };
      Txt.render(options);
     </script>
+
+    <title>Organic</title>
+    <meta name="description" content="An open source experiment">
+
   </head>
   <body>
     <h1>This is Organic, an open source experiment.</h1>
