add Skeleton css framework

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Julian Samarjiev">
+    <meta name="description" content="An open source experiment">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/skeleton.css">
+    <title>Organic</title>
 
     <!-- teletext.io scripts  -->
     <script src="https://teletext.io/js/latest/txt-min.js"></script>
@@ -13,15 +17,12 @@
      };
      Txt.render(options);
     </script>
-
-    <title>Organic</title>
-    <meta name="description" content="An open source experiment">
-
   </head>
   <body>
-    <h1>This is Organic, an open source experiment.</h1>
-    <h2>Let's see where it takes us.</h2>
-
-    <div data-txt="examples.simple_replacement"></div>
+    <div class="container">
+      <h1>This is Organic, an open source experiment.</h1>
+      <h2>Let's see where it takes us.</h2>
+      <div data-txt="examples.simple_replacement">asdasda</div>
+    </div>
   </body>
 </html>
