--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/skeleton.css">
     <title>Organic</title>
 
-    <!-- teletext.io scripts  -->
+    <!-- teletext.io script -->
     <script src="https://teletext.io/js/latest/txt-min.js"></script>
     <script>
      var options = {
